# meteriot

./: .gitpod.yml  README.md  Untitled Diagram.drawio  arch_overview.drawio  arch_overview.html
Read Interface/: READM.md
server/: Cargo.toml  build.rs
server/proto/: meteriot_base.proto
server/src/: meteriot_base.rs  server.rs  test_proc.rs
